Icon Viewer addon causes internal errors and slows text editor. #60199

Closed
opened 2019-01-05 16:34:39 +01:00 by Zachary · 5 comments

System Information
Windows 10 x64
GTX 950M

Blender Version
Broken:
Date: 2019-01-05
Hash: 1461d0185c04

Short description of error
Icon Viewer addon seems to work ,but prints internal errors and causes the text editor to slow down. If you click on "Misc" tab and try to resize text editor window it will be slow. If you open the console and hover over the icons it will constantly print internal errors.

icon_viewer_error.jpg

**System Information** Windows 10 x64 GTX 950M **Blender Version** Broken: Date: 2019-01-05 Hash: 1461d0185c04 **Short description of error** Icon Viewer addon seems to work ,but prints internal errors and causes the text editor to slow down. If you click on "Misc" tab and try to resize text editor window it will be slow. If you open the console and hover over the icons it will constantly print internal errors. ![icon_viewer_error.jpg](https://archive.blender.org/developer/F6186966/icon_viewer_error.jpg)
Author

Added subscriber: @AFWS

Added subscriber: @AFWS
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-01-07 09:27:00 +01:00
Member

Confirmed, checking....

Confirmed, checking....

This issue was referenced by blender/blender@0df17bc9c9

This issue was referenced by blender/blender@0df17bc9c91c5d5ebc839e0db9c59f6b61626fde
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender-addons#60199
No description provided.